--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
-    "react-ui-scrollspy": "^2.3.0",
+    "react-scroll": "^1.8.9",
     "typed.js": "^2.0.16",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -52,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.7"
   }
 }
