--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://Ankit04042001.github.io/portfolio",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
